# docs/swagger.json
@@ -34,7 +34,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/transport.ActorId"
+                            "$ref": "#/definitions/internal_transport_actor.ActorId"
                         }
                     }
                 ],
@@ -92,7 +92,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/actor.ActorInsert"
+                            "$ref": "#/definitions/actor_model.ActorInsert"
                         }
                     }
                 ],
@@ -150,7 +150,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/actor.UpdateActor"
+                            "$ref": "#/definitions/actor_model.UpdateActor"
                         }
                     }
                 ],
@@ -250,7 +250,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.UserLogin"
+                            "$ref": "#/definitions/user_model.UserLogin"
                         }
                     }
                 ],
@@ -278,7 +278,7 @@
         }
     },
     "definitions": {
-        "actor.ActorInsert": {
+        "actor_model.ActorInsert": {
             "type": "object",
             "properties": {
                 "birth_date": {
@@ -292,7 +292,7 @@
                 }
             }
         },
-        "actor.UpdateActor": {
+        "actor_model.UpdateActor": {
             "type": "object",
             "properties": {
                 "birth_date": {
@@ -309,7 +309,15 @@
                 }
             }
         },
-        "transport.ActorId": {
+        "github.com_Heater_dog_Vk_Intern_internal_transport_actor.ActorId": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_transport_actor.ActorId": {
             "type": "object",
             "properties": {
                 "id": {
@@ -325,7 +333,7 @@
                 }
             }
         },
-        "user.UserLogin": {
+        "user_model.UserLogin": {
             "type": "object",
             "properties": {
                 "login": {
